# sil

./: CMakeLists.txt  README.md
include/sil/: pnm.h  simage.h
src/: pnm.c  simage.c
test/: CMakeLists.txt  basic_getters.c  get_set_pixel.c  zero.c  zero_new.c
